fix(service/dao/model) Create some package, to dispatch some services/dao/model entities enh(repository) Add ExpertiseAreaRepository enh(config) Serialize all expertise areas into a config option